initial gulp build

--- a/src/app.styl
+++ b/src/app.styl
@@ -1,5 +1,9 @@
 /* app css stylesheet */
 
+@import 'vendor/*.css'
+@import '../node_modules/angular-material/angular-material.css'
+@import '../node_modules/angular-material/modules/css/angular-material-layout.css'
+
 .menu {
   list-style: none;
   border-bottom: 0.1em solid black;
