--- a/src/views/main/main.html
+++ b/src/views/main/main.html
@@ -1,25 +1,21 @@
 <md-content class="content">
- <md-whiteframe class="md-whiteframe-z1" layout layout-align="center center">
+  <md-whiteframe class="md-whiteframe-z1" layout layout-align="center center">
     <span>Interoperability workbench stub</span>
- </md-whiteframe>
+  </md-whiteframe>
 </md-content>
 
-      <md-grid-list
-        md-cols-sm="1" md-cols-md="2" md-cols-gt-md="2"
-        md-row-height-gt-md="20:3" md-row-height="20:3"
-        md-gutter="12px" md-gutter-gt-sm="8px" >
-   
-     <md-grid-tile class="gray">
-         Some
-    </md-grid-tile>
-          
-    <md-grid-tile class="green">
-      Stuff
-    </md-grid-tile>
-          
-    <md-grid-tile class="yellow">
-      Here
-    </md-grid-tile>
-   
-  </md-grid-list>
-    
+<md-grid-list md-cols-gt-md="2" md-cols-md="2" md-cols-sm="1" md-gutter-gt-sm="8px" md-gutter="12px" md-row-height-gt-md="20:3" md-row-height="20:3">
+
+  <md-grid-tile class="gray">
+    Some
+  </md-grid-tile>
+
+  <md-grid-tile class="green">
+    Stuff
+  </md-grid-tile>
+
+  <md-grid-tile class="yellow">
+    Here
+  </md-grid-tile>
+
+</md-grid-list>
