remove placeholder templates

--- a/src/app.styl
+++ b/src/app.styl
@@ -1,63 +1,4 @@
 /* app css stylesheet */
 
-@import '../node_modules/angular-material/angular-material.css'
-@import '../node_modules/angular-material/modules/css/angular-material-layout.css'
-
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
-}
-
-.menu:before {
-  content: "[";
-}
-
-.menu:after {
-  content: "]";
-}
-
-.menu > li {
-  display: inline;
-}
-
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
-}
-
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
-}
-
-.tab a {
-  text-decoration: none !important;
-  color: white;
-  height:100%;
-  width:100%;
-}
-
-.tab a.visited {
-      color:white;
-}
-
-.content {
-    padding-bottom: 32px;
-    padding-top: 32px;
-}
-
-
- .gray {
-  background: #f5f5f5; }
-.green {
-  background: #b9f6ca; }
-.yellow {
-  background: #ffff8d; }
-.blue {
-  background: #84ffff; }
-.purple {
-  background: #b388ff; }
-.red {
-  background: #ff8a80; }
+@import './vendor/bootstrap-3.3.5-dist/css/bootstrap.css'
+@import './vendor/bootstrap-flat-3.3.4-dist/bootstrap-flat.css'
