--- a/src/app.styl
+++ b/src/app.styl
@@ -2,3 +2,4 @@
 
 @import './vendor/bootstrap-3.3.5-dist/css/bootstrap.css'
 @import './vendor/bootstrap-flat-3.3.4-dist/bootstrap-flat.css'
+@import './vendor/angular-xeditable-0.1.8/css/xeditable.css'
