--- a/src/directives/templates/groupList.html
+++ b/src/directives/templates/groupList.html
@@ -2,7 +2,9 @@
   <div class="panel-heading" translate>Selaile</div>
   <div class="frontpage-panel__body">
     <ul class="frontpage-panel__list">
-      <li class="frontpage-panel__list__item" ng-repeat="group in groups">{{group['rdfs:label']}}</li>
+      <li class="frontpage-panel__list__item" ng-repeat="group in groups">
+        <a href="#/groups/{{group['@id']}}">{{group['rdfs:label']}}</a>
+      </li>
     </ul>
   </div>
 </div>
