add finnish translations

--- a/src/directives/templates/groupList.html
+++ b/src/directives/templates/groupList.html
@@ -1,5 +1,5 @@
 <div class="frontpage-panel">
-  <div class="panel-heading" translate>Selaile</div>
+  <div class="panel-heading" translate>Browse</div>
   <div class="frontpage-panel__body">
     <ul class="frontpage-panel__list">
       <li class="frontpage-panel__list__item" ng-repeat="group in groups">
