--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-6">
-    <h2>Yhteentoimivuusmenetelmä</h2>
+    <h2 translate>IOW header</h2>
     <ol>
       <li>just</li>
       <li>do</li>
