refacotr languages to service

--- a/src/views/group.html
+++ b/src/views/group.html
@@ -3,5 +3,5 @@
 <h2>{{model['rdfs:label']['@language']}}</h2>
 
 <ul>
-  <li ng-repeat="model in models">{{model.label.fi}}</li>
+  <li ng-repeat="model in models">{{model.label[language]}}</li>
 </ul>
