load group info on group page

--- a/src/views/group.html
+++ b/src/views/group.html
@@ -1,6 +1,4 @@
-{{urn}}
-
-<h2>{{model['rdfs:label']['@language']}}</h2>
+<h2>{{group.label[language]}}</h2>
 
 <ul>
   <li ng-repeat="model in models">{{model.label[language]}}</li>
