get model on model page

--- a/src/views/group.html
+++ b/src/views/group.html
@@ -1,5 +1,7 @@
 <h2>{{group.label[language]}}</h2>
 
 <ul>
-  <li ng-repeat="model in models">{{model.label[language]}}</li>
+  <li ng-repeat="model in models">
+    <a href="#/models/?urn={{model['@id'] | urlencode}}">{{model.label[language]}}</a>
+  </li>
 </ul>
