--- a/src/views/model.html
+++ b/src/views/model.html
@@ -4,18 +4,24 @@
 <p>
   {{model.comment[language]}}
 </p>
-<tabset>
-  <tab heading="Classes">
-    <ul>
-      <li ng-repeat="class in model.classes">{{class.label[language]}}</li>
-    </ul>
-  </tab>
-  <tab heading="Attributes">
-    <ul>
-      <li ng-repeat="attribute in model.attributes">{{attribute.label[language]}}</li>
-    </ul>
-  </tab>
-</tabset>
-<pre>
-{{model | json}}
-</pre>
+<div class="iow-panel">
+  <div class="model-panel--left">
+    <tabset>
+      <tab heading="Classes">
+        <ul>
+          <li ng-repeat="class in model.classes">{{class.label[language]}}</li>
+        </ul>
+      </tab>
+      <tab heading="Attributes">
+        <ul>
+          <li ng-repeat="attribute in model.attributes">{{attribute.label[language]}}</li>
+        </ul>
+      </tab>
+    </tabset>
+  </div>
+  <div class="model-panel--right">
+    <h2>
+      Content
+    </h2>
+  </div>
+</div>
