add classview directive

--- a/src/views/model.html
+++ b/src/views/model.html
@@ -20,8 +20,6 @@
     </tabset>
   </div>
   <div class="model-panel--right">
-    <h2>
-      Content
-    </h2>
+    <class-view></class-view>
   </div>
 </div>
