style active class selection

--- a/src/directives/templates/groupList.html
+++ b/src/directives/templates/groupList.html
@@ -1,7 +1,7 @@
 <div class="frontpage-panel">
   <div class="panel-heading" translate>Browse</div>
   <div class="frontpage-panel__body">
-    <ul class="frontpage-panel__list">
+    <ul class="panel__list">
       <li class="frontpage-panel__list__item" ng-repeat="group in groups">
         <a href="#/groups/{{group['@id']}}">{{group.label.fi}}</a>
       </li>
