shows props in model

--- a/src/directives/templates/classView.html
+++ b/src/directives/templates/classView.html
@@ -1,3 +1,7 @@
+<ul>
+  <li ng-repeat="property in class.property">{{property.label.fi}}</li>
+</ul>
+
 <pre ng-if="class">
 {{class | json}}
 </pre>
