only display active class if selected

--- a/src/views/model.html
+++ b/src/views/model.html
@@ -20,6 +20,6 @@
     </tabset>
   </div>
   <div class="model-panel--right">
-    <class-view active-class="class"></class-view>
+    <class-view active-class="class" ng-if="class"></class-view>
   </div>
 </div>
