--- a/src/views/model.html
+++ b/src/views/model.html
@@ -21,5 +21,6 @@
   </div>
   <div class="model-panel--right">
     <class-view active-class="class" ng-if="class"></class-view>
+    <attribute-view attribute="attribute" ng-if="attribute"></attribute-view>
   </div>
 </div>
