allow multiple open accordions

--- a/src/directives/templates/classView.html
+++ b/src/directives/templates/classView.html
@@ -1,7 +1,7 @@
 <h2>
   {{class.label.fi}}
 </h2>
-<accordion style="width: 80%;">
+<accordion close-others="false">
   <accordion-group ng-repeat="property in class.property" heading="{{property.label.fi}}">
     <p>
       {{property.comment.fi}}
