add chevrons to class list

--- a/src/directives/templates/classView.html
+++ b/src/directives/templates/classView.html
@@ -2,7 +2,8 @@
   {{class.label.fi}}
 </h2>
 <accordion close-others="false">
-  <accordion-group ng-repeat="property in class.property" heading="{{property.label.fi}}">
+  <accordion-group ng-repeat="property in class.property" is-open="isOpen[property['@id']]">
+    <accordion-heading>{{property.label.fi}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property['@id']], 'glyphicon-chevron-right': !isOpen[property['@id']]}"></span></accordion-heading>
     <p>
       {{property.comment.fi}}
     </p>
