--- a/src/directives/templates/classView.html
+++ b/src/directives/templates/classView.html
@@ -2,13 +2,15 @@
   {{class.label.fi}}
 </h2>
 <accordion close-others="false">
-  <accordion-group ng-repeat="property in class.property" is-open="isOpen[property['@id']]">
+  <accordion-group ng-repeat="property in class.property" is-open="isOpen[property['@id']]" ng-click="isOpen[property['@id']] = !isOpen[property['@id']]">
     <accordion-heading>{{property.label.fi}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property['@id']], 'glyphicon-chevron-right': !isOpen[property['@id']]}"></span></accordion-heading>
-    <p>
-      {{property.comment.fi}}
-    </p>
-    <pre>
+    <div ng-click="$event.stopPropagation()"><!-- prevent click anywhere to toggle visibility -->
+      <p>
+        {{property.comment.fi}}
+      </p>
+      <pre>
 {{property | json}}
-    </pre>
+      </pre>
+    </div>
   </accordion-group>
 </accordion>
