display raw associations

--- a/src/views/model.html
+++ b/src/views/model.html
@@ -27,4 +27,5 @@
 <div class="model-panel--right">
   <class-view active-class="class" ng-if="class"></class-view>
   <attribute-view attribute="attribute" ng-if="attribute"></attribute-view>
+  <association-view association="association" ng-if="association"></association-view>
 </div>
