--- a/src/directives/templates/classView.html
+++ b/src/directives/templates/classView.html
@@ -1,12 +1,12 @@
 <h2>
-  {{class.label[getLanguage()]}}
+  {{translate(class.label)}}
 </h2>
 <accordion close-others="false">
   <accordion-group ng-repeat="property in class.property" is-open="isOpen[property['@id']]" ng-click="isOpen[property['@id']] = !isOpen[property['@id']]">
-    <accordion-heading>{{property.label[getLanguage()]}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property['@id']], 'glyphicon-chevron-right': !isOpen[property['@id']]}"></span></accordion-heading>
+    <accordion-heading>{{translate(property.label)}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property['@id']], 'glyphicon-chevron-right': !isOpen[property['@id']]}"></span></accordion-heading>
     <div ng-click="$event.stopPropagation()"><!-- prevent click anywhere to toggle visibility -->
       <p>
-        {{property.comment[getLanguage()]}}
+        {{translate(property.comment)}}
       </p>
       <pre>
 {{property | json}}
