--- a/src/directives/templates/classView.html
+++ b/src/directives/templates/classView.html
@@ -5,7 +5,7 @@
   <accordion-group ng-repeat="property in class.property" is-open="isOpen[property['@id']]" ng-click="isOpen[property['@id']] = !isOpen[property['@id']]">
     <accordion-heading>{{translate(property.label)}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property['@id']], 'glyphicon-chevron-right': !isOpen[property['@id']]}"></span></accordion-heading>
     <div ng-click="$event.stopPropagation()"><!-- prevent click anywhere to toggle visibility -->
-      <property-view predicate="property.predicate" context="context"></property-view>
+      <property-view predicate="property.predicate" context="context" ng-if="isOpen[property['@id']]"></property-view>
     </div>
   </accordion-group>
 </accordion>
