--- a/src/directives/templates/classView.html
+++ b/src/directives/templates/classView.html
@@ -5,6 +5,10 @@
   <accordion-group ng-repeat="property in class.property" is-open="isOpen[property['@id']]" ng-click="isOpen[property['@id']] = !isOpen[property['@id']]">
     <accordion-heading>{{translate(property.label)}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property['@id']], 'glyphicon-chevron-right': !isOpen[property['@id']]}"></span></accordion-heading>
     <div ng-click="$event.stopPropagation()"><!-- prevent click anywhere to toggle visibility -->
+      <div class="model-view__title" translate>Nimi</div>
+      <div>{{translate(class.label)}}</div>
+      <div class="model-view__title" translate>Kuvaus</div>
+      <div>{{translate(class.comment)}}</div>
       <property-view predicate="property.predicate" context="context" ng-if="isOpen[property['@id']]"></property-view>
     </div>
   </accordion-group>
