--- a/src/directives/templates/propertyView.html
+++ b/src/directives/templates/propertyView.html
@@ -1,3 +1,6 @@
-<pre>
-{{property | json}}
-</pre>
+<div class="model-view__title" translate>Nimi</div>
+<div>{{translate(property.label)}}</div>
+<div class="model-view__title" translate>Kuvaus</div>
+<div>{{translate(property.comment)}}</div>
+<div class="model-view__title" translate>Tyyppi</div>
+<div>{{property.range}}</div>
