--- a/src/directives/templates/classView.html
+++ b/src/directives/templates/classView.html
@@ -15,7 +15,8 @@
         <button type="button" class="btn btn-default" ng-click="formFor.$cancel()" ng-show="formFor.$visible" translate>Cancel</button>
       </form>
       <accordion>
-        <accordion-group heading="{{property.predicate}}">
+        <accordion-group is-open="isOpen[property.predicate]">
+          <accordion-heading>{{property.predicate}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property.predicate], 'glyphicon-chevron-right': !isOpen[property.predicate]}"></span></accordion-heading>
           <property-view predicate="property.predicate" context="context" ng-if="isOpen[property['@id']]"></property-view>
         </accordion-group>
       </accordion>
