--- a/src/directives/templates/classView.html
+++ b/src/directives/templates/classView.html
@@ -6,9 +6,9 @@
     <accordion-heading>{{translate(property.label)}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property['@id']], 'glyphicon-chevron-right': !isOpen[property['@id']]}"></span></accordion-heading>
     <div>
       <form editable-form name="formFor">
-        <div class="model-view__title" translate>Nimi</div>
+        <div class="model-view__title" translate>Name</div>
         <div editable-text="property.label.fi">{{translate(property.label)}}</div>
-        <div class="model-view__title" translate>Kuvaus</div>
+        <div class="model-view__title" translate>Description</div>
         <div editable-text="class.comment.fi">{{translate(class.comment)}}</div>
         <button type="button" class="btn btn-default" ng-click="formFor.$show()" ng-show="!formFor.$visible" translate>Edit</button>
         <button type="submit" class="btn btn-default" ng-show="formFor.$visible" translate>Save</button>
