--- a/src/directives/templates/propertyView.html
+++ b/src/directives/templates/propertyView.html
@@ -1,8 +1,8 @@
-<div class="model-view__title" translate>Nimi</div>
+<div class="model-view__title" translate>Name</div>
 <div>{{translate(property.label)}}</div>
 <div ng-show="property.comment">
-  <div class="model-view__title" translate>Kuvaus</div>
+  <div class="model-view__title" translate>Description</div>
   <div>{{translate(property.comment)}}</div>
 </div>
-<div class="model-view__title" translate>Tyyppi</div>
+<div class="model-view__title" translate>Kind</div>
 <div>{{property.range}}</div>
