--- a/src/directives/templates/classView.html
+++ b/src/directives/templates/classView.html
@@ -1,6 +1,7 @@
 <h2>
   {{translate(class.label)}}
 </h2>
+<button type="button" class="btn btn-default" ng-click="addProperty()">Add property</button>
 <accordion close-others="false">
   <accordion-group ng-repeat="property in class.property" is-open="isOpen[property['@id']]">
     <accordion-heading>{{translate(property.label)}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property['@id']], 'glyphicon-chevron-right': !isOpen[property['@id']]}"></span></accordion-heading>
