--- a/src/directives/templates/classView.html
+++ b/src/directives/templates/classView.html
@@ -7,10 +7,8 @@
     <accordion-heading>{{translate(property.label)}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property['@id']], 'glyphicon-chevron-right': !isOpen[property['@id']]}"></span></accordion-heading>
     <div>
       <form editable-form name="formFor">
-        <div class="model-view__title" translate>Name</div>
-        <div editable-text="property.label[getLanguage()]">{{translate(property.label)}}</div>
-        <div class="model-view__title" translate>Description</div>
-        <div editable-text="class.comment[getLanguage()]">{{translate(class.comment)}}</div>
+        <form-input title="{{'Name' | translate}}" content="property.label"></form-input>
+        <form-input title="{{'Description' | translate}}" content="class.comment"></form-input>
         <button type="button" class="btn btn-default" ng-click="formFor.$show()" ng-show="!formFor.$visible" translate>Edit</button>
         <button type="submit" class="btn btn-default" ng-show="formFor.$visible" translate>Save</button>
         <button type="button" class="btn btn-default" ng-click="formFor.$cancel()" ng-show="formFor.$visible" translate>Cancel</button>
