--- a/src/directives/templates/classView.html
+++ b/src/directives/templates/classView.html
@@ -16,7 +16,7 @@
       <accordion>
         <accordion-group is-open="isOpen[property.predicate]">
           <accordion-heading>{{property.predicate | curie}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property.predicate], 'glyphicon-chevron-right': !isOpen[property.predicate]}"></span></accordion-heading>
-          <property-view predicate="property.predicate" context="context" ng-if="isOpen[property['@id']]"></property-view>
+          <predicate-view predicate="property.predicate" context="context" ng-if="isOpen[property['@id']]"></property-view>
         </accordion-group>
       </accordion>
     </div>
