--- a/src/directives/templates/classView.html
+++ b/src/directives/templates/classView.html
@@ -5,20 +5,6 @@
 <accordion close-others="false">
   <accordion-group ng-repeat="property in class.property" is-open="isOpen[property['@id']]">
     <accordion-heading>{{translate(property.label)}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property['@id']], 'glyphicon-chevron-right': !isOpen[property['@id']]}"></span></accordion-heading>
-    <div>
-      <form editable-form name="formFor">
-        <form-input title="{{'Name' | translate}}" content="property.label"></form-input>
-        <form-input title="{{'Description' | translate}}" content="property.comment"></form-input>
-        <button type="button" class="btn btn-default" ng-click="formFor.$show()" ng-show="!formFor.$visible" translate>Edit</button>
-        <button type="submit" class="btn btn-default" ng-show="formFor.$visible" translate>Save</button>
-        <button type="button" class="btn btn-default" ng-click="formFor.$cancel()" ng-show="formFor.$visible" translate>Cancel</button>
-      </form>
-      <accordion>
-        <accordion-group is-open="isOpen[property.predicate]">
-          <accordion-heading>{{property.predicate | curie}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property.predicate], 'glyphicon-chevron-right': !isOpen[property.predicate]}"></span></accordion-heading>
-          <predicate-view predicate="property.predicate" context="context" ng-if="isOpen[property['@id']]"></property-view>
-        </accordion-group>
-      </accordion>
-    </div>
+    <property-view property="property" context="context"></property-view>
   </accordion-group>
 </accordion>
