--- a/src/directives/templates/propertyView.html
+++ b/src/directives/templates/propertyView.html
@@ -2,6 +2,7 @@
   <form editable-form name="formFor">
     <form-input title="{{'Name' | translate}}" content="property.label"></form-input>
     <form-input title="{{'Description' | translate}}" content="property.comment"></form-input>
+    <form-input title="{{'Example' | translate}}" content="property.example"></form-input>
     <div ng-if="property.datatype">
       <div class="model-view__title" translate>Datatype</div>
       <div>{{property.datatype}}</div>
