--- a/src/directives/templates/predicateView.html
+++ b/src/directives/templates/predicateView.html
@@ -4,5 +4,5 @@
   <div class="model-view__title" translate>Description</div>
   <div>{{translate(property.comment)}}</div>
 </div>
-<div class="model-view__title" translate>Kind</div>
+<div class="model-view__title" translate>Type</div>
 <div>{{property.range}}</div>
