use class service for fetching class data

--- a/src/views/model.html
+++ b/src/views/model.html
@@ -25,7 +25,7 @@
   </tabset>
 </div>
 <div class="model-panel--right">
-  <class-view active-class="class" context="context" ng-if="class"></class-view>
+  <class-view class-id="class['@id']" ng-if="class"></class-view>
   <attribute-view attribute="attribute" ng-if="attribute"></attribute-view>
   <association-view association="association" ng-if="association"></association-view>
 </div>
