initial form for associations

--- a/src/directives/templates/associationView.html
+++ b/src/directives/templates/associationView.html
@@ -1,6 +1,6 @@
-<h2>
-  {{translate(association.label)}}
-</h2>
+<editable-form>
+  <form-input title="{{'Label' | translate}}" content="association.label"></form-input>
+</editable-form>
 <pre>
 {{association | json}}
 </pre>
