init form form attribute

--- a/src/directives/templates/attributeView.html
+++ b/src/directives/templates/attributeView.html
@@ -1,6 +1,3 @@
-<h2>
-  {{translate(attribute.label)}}
-</h2>
-<pre>
-{{attribute | json}}
-</pre>
+<editable-form>
+  <form-input title="{{'Label' | translate}}" content="attribute.label"></form-input>
+</editable-form>
