add comment for associations and attributes

--- a/src/directives/templates/associationView.html
+++ b/src/directives/templates/associationView.html
@@ -1,3 +1,4 @@
 <editable-form>
   <form-input title="{{'Label' | translate}}" content="association.label"></form-input>
+  <form-input title="{{'Comment' | translate}}" content="association.comment"></form-input>
 </editable-form>
