--- a/src/directives/templates/attributeView.html
+++ b/src/directives/templates/attributeView.html
@@ -1,3 +1,4 @@
 <editable-form>
   <form-input title="{{'Label' | translate}}" content="attribute.label"></form-input>
+  <form-input title="{{'Comment' | translate}}" content="attribute.comment"></form-input>
 </editable-form>
