--- a/src/directives/templates/attributeView.html
+++ b/src/directives/templates/attributeView.html
@@ -1,4 +1,6 @@
 <editable-form>
   <form-input title="{{'Label' | translate}}" content="attribute.label"></form-input>
   <form-input title="{{'Comment' | translate}}" content="attribute.comment"></form-input>
+  <div class="model-view__title" translate>Range</div>
+  <div>{{attribute.range}}</div>
 </editable-form>
