--- a/src/components/templates/attributeView.html
+++ b/src/components/templates/attributeView.html
@@ -1,6 +1,7 @@
 <editable-form>
   <form-input title="{{'Label' | translate}}" content="attribute.label"></form-input>
   <form-input title="{{'Comment' | translate}}" content="attribute.comment"></form-input>
-  <div class="model-view__title" translate>Range</div>
-  <div>{{attribute.range}}</div>
+  <form-input title="{{'Range' | translate}}" content="attribute.range"></form-input>
+  <div class="model-view__title" translate>Is defined by</div>
+  <div>{{attribute.isDefinedBy}}</div>
 </editable-form>
