add missing association fields

--- a/src/components/templates/associationView.html
+++ b/src/components/templates/associationView.html
@@ -1,4 +1,7 @@
 <editable-form>
   <form-input title="{{'Label' | translate}}" content="association.label"></form-input>
   <form-input title="{{'Comment' | translate}}" content="association.comment"></form-input>
+  <form-input title="{{'Range' | translate}}" content="association.range"></form-input>
+  <div class="model-view__title" translate>Is defined by</div>
+  <div>{{association.isDefinedBy}}</div>
 </editable-form>
