--- a/src/components/templates/model.html
+++ b/src/components/templates/model.html
@@ -3,7 +3,10 @@
 </h2>
 
 <editable-form>
+  <form-input title="{{'Label' | translate}}" content="model.label"></form-input>
   <form-input title="{{'Comment' | translate}}" content="model.comment"></form-input>
+  <div class="model-view__title" translate>Id</div>
+  <div>{{model['@id']}}</div>
 </editable-form>
 
 
