Order lists by localized label, translation filters implemented
Use translation filters instead of passing functions to scope
Closes #84

--- a/src/components/templates/classView.html
+++ b/src/components/templates/classView.html
@@ -1,5 +1,5 @@
 <h2>
-  {{translate(class.label)}}
+  {{class | translateLabel}}
 </h2>
 <editable-form>
   <form-input title="{{'Description' | translate}}" content="class.comment"></form-input>
@@ -8,7 +8,7 @@
 <button type="button" class="btn btn-default" ng-click="addProperty()">Add property</button>
 <accordion close-others="false">
   <accordion-group ng-repeat="property in class.property" is-open="isOpen[property['@id']]">
-    <accordion-heading>{{translate(property.label)}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property['@id']], 'glyphicon-chevron-right': !isOpen[property['@id']]}"></span></accordion-heading>
+    <accordion-heading>{{property | translateLabel}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property['@id']], 'glyphicon-chevron-right': !isOpen[property['@id']]}"></span></accordion-heading>
     <property-view property="property" context="context"></property-view>
   </accordion-group>
 </accordion>
