--- a/src/components/templates/propertyView.html
+++ b/src/components/templates/propertyView.html
@@ -10,7 +10,7 @@
   </editable-form>
   <accordion>
     <accordion-group is-open="isOpen[property.predicate]">
-      <accordion-heading>{{property.predicate | curie}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property.predicate], 'glyphicon-chevron-right': !isOpen[property.predicate]}"></span></accordion-heading>
+      <accordion-heading>{{property.predicate}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property.predicate], 'glyphicon-chevron-right': !isOpen[property.predicate]}"></span></accordion-heading>
       <predicate-view predicate="property.predicate" context="context" ng-if="isOpen[property.predicate]"></predicate-view>
     </accordion-group>
   </accordion>
