--- a/src/components/templates/predicateView.html
+++ b/src/components/templates/predicateView.html
@@ -5,4 +5,4 @@
   <div>{{property.comment | translateValue}}</div>
 </div>
 <div class="model-view__title" translate>Type</div>
-<div>{{property.range}}</div>
+<div>{{property['@type']}}</div>
