--- a/src/components/templates/classView.html
+++ b/src/components/templates/classView.html
@@ -5,7 +5,7 @@
   <form-input title="{{'Description' | translate}}" content="class.comment"></form-input>
   <form-input title="{{'PrefLabel' | translate}}" content="class.prefLabel"></form-input>
 </editable-form>
-<button type="button" class="btn btn-default" ng-click="addProperty()">Add property</button>
+<button type="button" class="btn btn-default" ng-click="addProperty()" ng-if="isLoggedIn()">Add property</button>
 <accordion close-others="false">
   <accordion-group ng-repeat="property in class.property" is-open="isOpen[property['@id']]">
     <accordion-heading>{{property | translateLabel}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property['@id']], 'glyphicon-chevron-right': !isOpen[property['@id']]}"></span></accordion-heading>
