--- a/src/components/templates/predicateView.html
+++ b/src/components/templates/predicateView.html
@@ -6,3 +6,5 @@
 </div>
 <div class="model-view__title" translate>Type</div>
 <div>{{property['@type']}}</div>
+<div class="model-view__title" translate>Range</div>
+<div>{{property.range}}</div>
