move datatype & valueclass to property

--- a/src/components/templates/propertyView.html
+++ b/src/components/templates/propertyView.html
@@ -7,6 +7,10 @@
       <div class="model-view__title" translate>Datatype</div>
       <div>{{property.datatype}}</div>
     </div>
+    <div ng-show="property.valueClass">
+      <div class="model-view__title" translate>Valueclass</div>
+      <div>{{property.valueClass}}</div>
+    </div>
   </editable-form>
   <accordion>
     <accordion-group is-open="isOpen[property.predicate]">
