--- a/src/components/templates/classView.html
+++ b/src/components/templates/classView.html
@@ -5,6 +5,8 @@
   <div class="model-view__title">Superclass</div>
   <div>{{class.subClassOf}}</div>
 </div>
+<div class="model-view__title">Is defined by</div>
+<div>{{class.isDefinedBy}}</div>
 <editable-form>
   <form-input title="{{'Description' | translate}}" content="class.comment"></form-input>
   <form-input title="{{'PrefLabel' | translate}}" content="class.prefLabel"></form-input>
