Translations to login

--- a/src/components/templates/login-modal.html
+++ b/src/components/templates/login-modal.html
@@ -1,12 +1,9 @@
 <div>
+  <h2 translate>Kirjautuminen</h2>
 
-  <!-- TODO: localization -->
+  <p translate>eDuuni tietoa</p>
+  <p translate>kirjautuminen tietoa</p>
 
-  <h2>Kirjautuminen</h2>
-
-  <p>Palveluun kirjaudutaan eDuuni-tunnuksilla. Kirjautumista vaaditaan jos haluat muokata palvelun sisältöä.</p>
-  <p>Alla olevalla painikkeella ohjaudut eDuuni-palvelun kirjautumiseen. Palaa sen jälkeen takaisin palveluun.</p>
-
-  <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.login()">Kirjaudu</button>
-  <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.register()">Luo tunnukset</button>
+  <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.login()" translate>Kirjaudu</button>
+  <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.register()" translate>Luo tunnukset</button>
 </div>
