--- a/src/components/templates/attributeView.html
+++ b/src/components/templates/attributeView.html
@@ -1,7 +1,7 @@
 <editable-form>
   <form-input title="{{'Label' | translate}}" content="attribute.label"></form-input>
   <form-input title="{{'Comment' | translate}}" content="attribute.comment"></form-input>
-  <form-input title="{{'Range' | translate}}" content="attribute.range"></form-input>
+  <form-select title="{{'Range' | translate}}" content="attribute.range" values="attributeValues"></form-select>
   <div class="model-view__title" translate>Is defined by</div>
   <div>{{attribute.isDefinedBy}}</div>
 </editable-form>
